# ttc_subway_times

./: .coveragerc  README.md  cronic.py  pytest.ini  requirements.test.txt  setup.cfg  setup.py  tox.ini  ttc_api_scraper.py
.circleci/: config.yml
api/: README.md  pyproject.toml
api/tests/: conftest.py  test_ttc_subway_times_api.py
api/ttc_subway_times_api/: config.py
src/ttc_api_scraper/: __init__.py
tests/: test_ttc_api_scraper.py  test_ttx_api_scraper.py
web/: README.md  pyproject.toml  pytest.ini
web/tests/: test_ttc_subway_times_ui.py
web/ttc_subway_times_ui/: __init__.py  routes.py
